--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.26.7"
   },
   "scripts": {
