--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "formik": "^2.1.4",
     "jw-react-pagination": "^1.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -22,7 +23,8 @@
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.26.7"
+    "sass": "^1.26.7",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
