--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://felcg.github.io/Gamelogged",
+  "homepage": "https://www.gamelogged.com",
   "name": "gamelogged",
   "version": "0.1.0",
   "private": true,
@@ -34,7 +34,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "proxy": "https://guarded-mesa-01224.herokuapp.com/api/",
+  "proxy": "http://localhost:3001/",
   "eslintConfig": {
     "extends": "react-app"
   },
