--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
-    "formik": "^2.1.4",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.26.7",
-    "yup": "^0.29.1",
     "bootstrap": "^5.1.3",
+    "formik": "^2.1.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.26.7",
+    "typescript": "^4.9.4",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -61,7 +62,6 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "gh-pages": "^3.1.0",
-    "redux-devtools-extension": "^2.13.8",
-    "typescript": "^4.9.4"
+    "redux-devtools-extension": "^2.13.8"
   }
 }
