initial change from jsx and js to tsx and ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "strictPropertyInitialization": false,
     "useUnknownInCatchVariables": false,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "typeRoots": ["node_modules/yup"]
   },
   "include": ["src", "decs.d.ts"]
 }
