--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.26.7",
     "typescript": "^4.9.4",
-    "yup": "^0.29.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,6 +55,8 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/yup": "^0.32.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
